// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches last snapshot 1`] = `
<SafeAreaViewMock>
  <KeyboardFriendlyView>
    <View>
      <Text>
        Everything look good?
      </Text>
      <Text>
        You can always come back and change your details at any time
      </Text>
    </View>
    <View>
      <View>
        <Text>
          What's the name of your community?
        </Text>
        <View>
          <Component
            allowFontScaling={true}
            disabled={true}
            rejectResponderTermination={true}
            underlineColorAndroid="rgba(0,0,0,0)"
          />
          <ForwardRef>
            <Text>
              Edit
            </Text>
          </ForwardRef>
        </View>
      </View>
      <View>
        <Text>
          What's the url of your community?
        </Text>
        <View>
          <Component
            allowFontScaling={true}
            disabled={true}
            rejectResponderTermination={true}
            underlineColorAndroid="rgba(0,0,0,0)"
          />
          <ForwardRef>
            <Text>
              Edit
            </Text>
          </ForwardRef>
        </View>
      </View>
    </View>
    <View>
      <Button
        disabled={false}
        onPress={[Function]}
        text="Let's Do This!"
      />
    </View>
  </KeyboardFriendlyView>
</SafeAreaViewMock>
`;

exports[`matches last snapshot when visible is true 1`] = `
<SafeAreaView>
  <KeyboardFriendlyView>
    <View>
      <Text>
        Everything look good?
      </Text>
      <Text>
        You can always come back and change your details at any time
      </Text>
    </View>
    <View>
      <View>
        <Text>
          What's the name of your community?
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            disabled={true}
            rejectResponderTermination={true}
            underlineColorAndroid="rgba(0,0,0,0)"
          />
          <View
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text>
              Edit
            </Text>
          </View>
        </View>
      </View>
      <View>
        <Text>
          What's the url of your community?
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            disabled={true}
            rejectResponderTermination={true}
            underlineColorAndroid="rgba(0,0,0,0)"
          />
          <View
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text>
              Edit
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View>
            <Text>
              This is an error
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View>
              <Text>
                Let's Do This!
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </KeyboardFriendlyView>
</SafeAreaView>
`;
